version/0.27/_sources/api/solver/_autosummary/settings/fluid_1.rst.txt
:orphan:

.. _fluid_1:

fluid
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.fluid_1
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`fluid_1_child <fluid_1_child>`


.. rubric:: Included in:

==================================================   ========================================

Parent                                                                                Summary

==================================================   ========================================
:ref:`cell_zone_conditions <cell_zone_conditions>`       Enter the cell zone conditions menu.

==================================================   ========================================

